--- a/app/src/main/res/drawable/icon_photo.xml
+++ b/app/src/main/res/drawable/icon_photo.xml
@@ -1,13 +1,5 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="32dp"
-    android:height="32dp"
-    android:viewportWidth="32"
-    android:viewportHeight="32">
-  <group>
-    <clip-path
-        android:pathData="M0,0h32v32h-32z"/>
-    <path
-        android:pathData="M4,5.333V1.333H6.667V5.333H10.667V8H6.667V12H4V8H0V5.333H4ZM8,13.333V9.333H12V5.333H21.333L23.773,8H28C29.467,8 30.667,9.2 30.667,10.667V26.667C30.667,28.133 29.467,29.333 28,29.333H6.667C5.2,29.333 4,28.133 4,26.667V13.333H8ZM17.333,25.333C21.013,25.333 24,22.347 24,18.667C24,14.987 21.013,12 17.333,12C13.653,12 10.667,14.987 10.667,18.667C10.667,22.347 13.653,25.333 17.333,25.333ZM13.067,18.667C13.067,21.027 14.973,22.933 17.333,22.933C19.693,22.933 21.6,21.027 21.6,18.667C21.6,16.307 19.693,14.4 17.333,14.4C14.973,14.4 13.067,16.307 13.067,18.667Z"
-        android:fillColor="#042741"/>
-  </group>
+<vector android:height="32dp" android:tint="#000000"
+    android:viewportHeight="24" android:viewportWidth="24"
+    android:width="32dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="@android:color/white" android:pathData="M3,4V1h2v3h3v2H5v3H3V6H0V4H3zM6,10V7h3V4h7l1.83,2H21c1.1,0 2,0.9 2,2v12c0,1.1 -0.9,2 -2,2H5c-1.1,0 -2,-0.9 -2,-2V10H6zM13,19c2.76,0 5,-2.24 5,-5s-2.24,-5 -5,-5s-5,2.24 -5,5S10.24,19 13,19zM9.8,14c0,1.77 1.43,3.2 3.2,3.2s3.2,-1.43 3.2,-3.2s-1.43,-3.2 -3.2,-3.2S9.8,12.23 9.8,14z"/>
 </vector>
