--- a/app/src/main/res/layout/acitivity_furo.xml
+++ b/app/src/main/res/layout/acitivity_furo.xml
@@ -13,7 +13,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imprimir"
         app:layout_constraintTop_toTopOf="@+id/imprimir"
-        app:srcCompat="@android:drawable/ic_menu_delete" />
+        app:srcCompat="@drawable/icon_delet" />
 
     <ImageButton
         android:id="@+id/imageButton19"
@@ -24,7 +24,7 @@
         app:layout_constraintEnd_toStartOf="@+id/imprimir"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/recyclerAmostras"
-        app:srcCompat="@android:drawable/ic_menu_add" />
+        app:srcCompat="@drawable/icon_add_padron" />
 
     <Button
         android:id="@+id/imprimir"
