--- a/app/src/main/res/layout/activity_ensaio.xml
+++ b/app/src/main/res/layout/activity_ensaio.xml
@@ -170,7 +170,7 @@
                 android:layout_marginTop="12dp"
                 android:ems="10"
                 android:inputType="number"
-                android:text="Name"
+                android:text="0"
                 app:layout_constraintEnd_toEndOf="@+id/textGolpes"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/textGolpes"
@@ -220,7 +220,7 @@
                 android:layout_marginTop="16dp"
                 android:ems="10"
                 android:inputType="number"
-                android:text="Name"
+                android:text="0"
                 app:layout_constraintEnd_toEndOf="@+id/editTextGolpe1"
                 app:layout_constraintStart_toStartOf="@+id/editTextGolpe1"
                 app:layout_constraintTop_toBottomOf="@+id/editTextGolpe1" />
@@ -232,7 +232,7 @@
                 android:layout_marginTop="16dp"
                 android:ems="10"
                 android:inputType="number"
-                android:text="Name"
+                android:text="0"
                 app:layout_constraintEnd_toEndOf="@+id/editTextGolpe2"
                 app:layout_constraintStart_toStartOf="@+id/editTextGolpe2"
                 app:layout_constraintTop_toBottomOf="@+id/editTextGolpe2" />
