--- a/app/src/main/res/values/Style.xml
+++ b/app/src/main/res/values/Style.xml
@@ -21,6 +21,8 @@
     <style name="ImageButton" parent="Widget.AppCompat.ImageButton">
         <item name="backgroundTint">#00042741</item>
         <item name="tint">@color/color_primary</item>
+        <item name="android:layout_width">40dp</item>
+        <item name="android:layout_height">40dp</item>
     </style>
 
     <!--- EditText padrão do app. -->
