--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,16 +1,47 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.MontaigneApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.MontaigneApp" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/destaque</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/black</item>
+        <item name="android:colorPrimary">@color/destaque</item>
+        <item name="colorPrimaryVariant">@color/fundo</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <item name="android:windowBackground">@color/black</item>
+
+
+        <!-- Estilos padrão. -->
+        <item name="android:textColor">@color/white</item>
+        <item name="colorAccent">@color/accent</item>
+        //fundo
+        <item name="backgroundColor">#000000</item>
+
+        <item name="android:textColorHint">@color/material_dynamic_neutral_variant50</item>
+        <item name="materialButtonStyle">@style/ButtonPadrao_Dark</item>
+        <item name="imageButtonStyle">@style/ImageButton_Dark</item>
+        <item name="textInputStyle">@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox</item>
+        <item name="editTextStyle">@style/Edit_Text_dark</item>
+        <item name="color">@color/destaque</item>
+
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_200</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="colorSecondary">@color/destaque</item>
+
+        <!--Button flutuante-->
+        <item name="colorOnSecondary">@color/white</item>
+
+
+
+        <item name="android:statusBarColor" tools:targetApi="l">@color/black</item>
         <!-- Customize your theme here. -->
     </style>
+
+
+    <style name="Theme.MontaigneApp.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="Theme.MontaigneApp.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.MontaigneApp.PopupOverlay" parent="ThemeOverlay.AppCompat.Dark" />
+
+
 </resources>
