--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,11 +1,11 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Padrão do tema claro . -->
-    <style name="Theme.MontaigneApp" parent="Theme.MaterialComponents.Light.NoActionBar">
+    <style name="Theme.MontaigneApp" parent="Theme.AppCompat.Light.NoActionBar">
 
 
 
         <!-- Primary color. -->
-        <item name="colorPrimary">@color/color_primary</item>
+        <item name="colorPrimary">#336E99</item>
         <item name="colorPrimaryVariant">@color/black</item>
         <item name="colorOnPrimary">@color/white</item>
 
@@ -14,14 +14,13 @@
         <item name="android:textColor">@color/black</item>
         <item name="colorAccent">@color/accent</item>
         //fundo
-        <item name="backgroundColor">#FFFFFF</item>
+        <item name="android:windowBackground">#FFFFFF</item>
 
         <item name="android:textColorHint">@color/hint</item>
-        <item name="materialButtonStyle">@style/ButtonPadrao</item>
-        <item name="imageButtonStyle">@style/ImageButton</item>
+        <item name="materialButtonStyle">@style/ButtonPadrao_light</item>
+        <item name="imageButtonStyle">@style/ImageButton_light</item>
         <item name="textInputStyle">@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox</item>
-        <item name="editTextStyle">@style/Edit_Text</item>
-
+        <item name="editTextStyle">@style/Edit_Text_light</item>
 
 
 
