Corrigido erro de copilação do app no modo noturno color e textview

--- a/app/src/main/res/values/style_dark.xml
+++ b/app/src/main/res/values/style_dark.xml
@@ -30,4 +30,10 @@
         <item name="backgroundTint">#00042741</item>
         <item name="tint">@color/destaque</item>
     </style>
+
+    <!-- TextView Padrão do app Dark-->
+    <style name="TextView_Dark" parent="Widget.AppCompat.TextView">
+        <item name="tint">@color/fundo</item>
+    </style>
+
 </resources>
