--- a/app/src/main/res/layout/adapter_home_projeto_categoria.xml
+++ b/app/src/main/res/layout/adapter_home_projeto_categoria.xml
@@ -34,7 +34,7 @@
             android:elevation="40dp"
             android:padding="0dp"
             android:text="SPT"
-            android:textColor="@color/destaque"
+            android:textColor="@color/fundo"
             app:cornerRadius="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
