--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -5,7 +5,6 @@
         <item name="android:colorPrimary">@color/destaque</item>
         <item name="colorPrimaryVariant">@color/fundo</item>
         <item name="colorOnPrimary">@color/white</item>
-        <item name="android:windowBackground">@color/black</item>
 
 
         <!-- Estilos padrão. -->
@@ -15,18 +14,17 @@
         <!--  fundo-->
         <item name="backgroundColor">#000000</item>
 
-        <item name="android:textColorHint">@color/material_dynamic_neutral_variant50</item>
         <item name="android:buttonStyle">@style/ButtonPadrao_Dark</item>
         <item name="imageButtonStyle">@style/ImageButton_Dark</item>
-        <item name="textInputStyle">@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox</item>
         <item name="editTextStyle">@style/Edit_Text_dark</item>
-        <item name="color">@color/destaque</item>
+        <item name="android:textViewStyle">@style/TextView_Dark</item>
+
 
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/destaque</item>
 
         <!--Button flutuante-->
-        <item name="colorOnSecondary">@color/white</item>
+
 
 
 
